--- a/signin/templates/signin/signin.html
+++ b/signin/templates/signin/signin.html
@@ -16,26 +16,28 @@
       <span class="page-title">회원가입</span>
     </div>
 
-    <form onsubmit="return false" class="signup-form">
+    <form method="POST" action="/signup/" class="signup-form">
+      {% csrf_token %}
       <label class="label">아이디</label>
       <div class="id-wrapper">
         <div class="input-icon-wrapper">
-          <input type="text" class="login-field" id="uid" placeholder="아이디" required />
+          <input type="text" class="login-field" id="uid" name="uid" placeholder="아이디" required />
           <img id="check-icon" class="check-icon" src="" alt="확인 아이콘" />
         </div>
+        {% csrf_token %}
         <button type="button" class="check-btn">중복확인</button>
       </div>
       <p id="id-message" class="description">6~10자 영문, 숫자로 입력해 주세요</p>
 
       <label class="label-pwd">비밀번호</label>
-      <input type="password" class="pwd-field" id="pwd" placeholder="비밀번호" required />
+      <input type="password" class="pwd-field" id="pwd" name="pwd" placeholder="비밀번호" required />
       <input type="password" class="pwd-field" id="pwd-check" placeholder="비밀번호 재확인" required />
       <p id="pwd-message" class="description">6~20자 영문, 숫자, 특수문자를 조합하여 입력해 주세요</p>
 
       <input type="submit" value="회원가입" class="submit-btn" id="signup-btn" disabled />
 
       <p class="login-link">
-        <a href="../Login/login.html">이미 가입되어 있으신가요?</a>
+        <a href="{% url 'login' %}">이미 가입되어 있으신가요?</a>
       </p>
     </form>
   </div>
@@ -168,11 +170,6 @@
       updateSignupButtonState();
     }
 
-    signupBtn.addEventListener('click', () => {
-      if (!signupBtn.disabled) {
-        window.location.href = '../Login/login.html';
-      }
-    });
   </script>
 </body>
 </html>
