feat: home요소 추가

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -21,71 +21,71 @@
         <!-- 지도 핀 위치 -->
         <div class="marker" style="top: 85px; left: 120px;" data-region="서울">
           <span class="region">서울</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.1|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 65px; left: 70px;" data-region="인천">
           <span class="region">인천</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.3|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 70px; left: 220px;" data-region="강원">
           <span class="region">강원</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.4|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 120px; left: 160px;" data-region="경기">
           <span class="region">경기</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.2|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 145px; left: 210px;" data-region="충북">
           <span class="region">충북</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.5|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 170px; left: 280px;" data-region="경북">
           <span class="region">경북</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.9|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 202px; left: 150px;" data-region="대전">
           <span class="region">대전</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.8|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 240px; left: 240px;" data-region="대구">
           <span class="region">대구</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.11|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 265px; left: 300px;" data-region="울산">
           <span class="region">울산</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.12|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 166px; left: 135px;" data-region="세종">
           <span class="region">세종</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.7|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 190px; left: 90px;" data-region="충남">
           <span class="region">충남</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.6|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 260px; left: 120px;" data-region="전북">
           <span class="region">전북</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.14|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 305px; left: 110px;" data-region="광주">
           <span class="region">광주</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.16|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 350px; left: 120px;" data-region="전남">
           <span class="region">전남</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.15|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 300px; left: 210px;" data-region="경남">
           <span class="region">경남</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.10|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 303px; left: 285px;" data-region="부산">
           <span class="region">부산</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.13|default:"0" }}</span>
         </div>
         <div class="marker" style="top: 450px; left: 100px;" data-region="제주">
           <span class="region">제주</span>
-          <span class="count-circle">0</span>
+          <span class="count-circle">{{ count_by_region.17|default:"0" }}</span>
         </div>
       </div>
 
