--- a/travelPost/templates/travelPostTemp/travelPostTemp.html
+++ b/travelPost/templates/travelPostTemp/travelPostTemp.html
@@ -1,10 +1,35 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>도도기록</title>
+    <link rel="stylesheet" href="{% static 'travelPostTemp/travelPostTemp.css' %}" />
 </head>
 <body>
+  <div class="mobile-wrapper">
+    <div class="top-bar">
+      <img src="{% static 'travelPostTemp/images/iconoir_nav-arrow-left.png' %}" class="back-icon" onclick="history.back()" />
+      <span class="page-title">임시저장목록</span>
+    </div>
 
+    <div id="record-container"></div>
+
+    <div class="modal-overlay" id="delete-modal">
+      <div class="modal-content">
+        <img src="{% static 'travelPostTemp/images/iconoir_warning-triangle-solid.svg' alt="경고" class="modal-icon" />
+        <p>삭제하시겠어요?</p>
+        <p>기록을 삭제하면 복구할 수 없어요!</p>
+        <div class="modal-buttons">
+          <button onclick="closeModal()">취소</button>
+          <button onclick="deleteCard()">삭제</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="temp.js"></script>
 </body>
 </html>
