feat : 임시저장 버튼 누르면 /Temp로 이동

--- a/travelPost/templates/travelPost/travelPost.html
+++ b/travelPost/templates/travelPost/travelPost.html
@@ -32,7 +32,7 @@
       <!-- 3) 사진 업로드 & 슬라이더 -->
       <div class="photo-box">
         <div class="photo-placeholder" id="photo-placeholder">
-          <img src="{% static 'travelPost/images/Group.svg' %} alt="사진 아이콘" />
+          <img src="{% static 'travelPost/images/Group.svg' %}" alt="사진 아이콘" />
           <button type="button" class="photo-button" id="photo-add-btn">사진 추가하기</button>
           <p>기억에 남는 순간을 추가하세요!</p>
         </div>
@@ -108,6 +108,13 @@
 
       <!-- 6) 버튼: 임시저장, 저장하기 -->
       <button class="temp-save" id="temp-save-btn">임시저장</button>
+        <script>
+            document.getElementById('temp-save-btn').addEventListener('click', function() {
+                window.location.href = '/Temp';
+            });
+        </script>
+
+
       <button class="save-button" id="save-btn">저장하기</button>
     </div>
   </div>
