--- a/travelPost/templates/travelPostTemp/travelPostTemp.html
+++ b/travelPost/templates/travelPostTemp/travelPostTemp.html
@@ -30,6 +30,6 @@
     </div>
   </div>
 
-  <script src="temp.js"></script>
+  <script src="{% static 'travelPostTemp/travelPostTemp.js' %}"></script>
 </body>
 </html>
