--- a/travelPost/templates/travelPost/travelPost.html
+++ b/travelPost/templates/travelPost/travelPost.html
@@ -32,6 +32,11 @@
       <div class="region-group">
         <div class="region-chip base" id="base-chip">지역</div>
         <button class="add-region" id="add-region-btn">+ 지역 추가하기</button>
+          <script>
+              document.getElementById('add-region-btn').addEventListener('click', function() {
+                  window.location.href = '/travelPost/selectLocal/';
+              });
+          </script>
       </div>
 
       <!-- 3) 사진 업로드 & 슬라이더 -->
