fix : 반환 url 수정

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -100,7 +100,7 @@
 
         <script>
             document.getElementById('add-record-btn').addEventListener('click', function () {
-                window.location.href = '/travelPost/travelPost/';
+                window.location.href = '/travelPost/';
             });
         </script>
 
