--- a/travelPost/templates/travelPost/travelPost.html
+++ b/travelPost/templates/travelPost/travelPost.html
@@ -118,9 +118,18 @@
 
       <!-- 6) 버튼: 임시저장, 저장하기 -->
       <button class="temp-save" id="temp-save-btn">임시저장</button>
-
+        <script>
+            document.getElementById('temp-save-btn').addEventListener('click', function () {
+                window.location.href = '/travelPost/Temp/';
+            });
+        </script>
 
       <button class="save-button" id="save-btn">저장하기</button>
+        <script>
+            document.getElementById('save-btn').addEventListener('click', function () {
+                window.location.href = '/travelList/';
+            });
+        </script>
     </div>
   </div>
     <script src="{% static 'travelPost/travelPost.js' %}"></script>
