fix : main으로 뒤로가는 경로 수정

--- a/travelList/templates/travelList/travelList.html
+++ b/travelList/templates/travelList/travelList.html
@@ -13,7 +13,7 @@
       <img
         src="{% static 'travelList/images/iconoir_nav-arrow-left.png' %}"
         class="back-icon"
-        onclick="location.href = '../Main/main.html';"
+        onclick="location.href = '/home/';"
       />
       <span id="region-title" class="page-title">지역명</span>
       <a href="temp.html" class="temp-link">임시저장 목록</a>
