--- a/travelList/templates/travelList/travelList.html
+++ b/travelList/templates/travelList/travelList.html
@@ -37,6 +37,7 @@
       </div>
     </div>
   </div>
+  <h1>{{ region_id }}번 지역입니다</h1> <!-- test용..... 지워두 댐-->
 
     <script src="{% static 'travelList/travelList.js' %}"></script>
 </body>
