--- a/travelPost/templates/travelPost/travelPost.html
+++ b/travelPost/templates/travelPost/travelPost.html
@@ -17,11 +17,11 @@
       />
       <span class="page-title" id="page-title">기록 추가하기</span>
       <button id="temp-list-btn" class="temp-list">임시저장 목록</button>
-        <script>
-            document.getElementById('temp-list-btn').addEventListener('click', function() {
-                window.location.href = '/travelPost/Temp';
-            });
-        </script>
+<!--        <script>-->
+<!--            document.getElementById('temp-list-btn').addEventListener('click', function() {-->
+<!--                window.location.href = '/travelPost/Temp';-->
+<!--            });-->
+<!--        </script>-->
     </div>
 
     <div class="form">
@@ -32,11 +32,11 @@
       <div class="region-group">
         <div class="region-chip base" id="base-chip">지역</div>
         <button class="add-region" id="add-region-btn">+ 지역 추가하기</button>
-          <script>
-              document.getElementById('add-region-btn').addEventListener('click', function() {
-                  window.location.href = '/travelPost/selectLocal/';
-              });
-          </script>
+<!--          <script>-->
+<!--              document.getElementById('add-region-btn').addEventListener('click', function() {-->
+<!--                  window.location.href = '/travelPost/selectLocal/';-->
+<!--              });-->
+<!--          </script>-->
       </div>
 
       <!-- 3) 사진 업로드 & 슬라이더 -->
@@ -118,18 +118,18 @@
 
       <!-- 6) 버튼: 임시저장, 저장하기 -->
       <button class="temp-save" id="temp-save-btn">임시저장</button>
-        <script>
-            document.getElementById('temp-save-btn').addEventListener('click', function () {
-                window.location.href = '/travelPost/Temp/';
-            });
-        </script>
+<!--        <script>-->
+<!--            document.getElementById('temp-save-btn').addEventListener('click', function () {-->
+<!--                window.location.href = '/travelPost/Temp/';-->
+<!--            });-->
+<!--        </script>-->
 
       <button class="save-button" id="save-btn">저장하기</button>
-        <script>
-            document.getElementById('save-btn').addEventListener('click', function () {
-                window.location.href = '/travelList/';
-            });
-        </script>
+<!--        <script>-->
+<!--            document.getElementById('save-btn').addEventListener('click', function () {-->
+<!--                window.location.href = '/travelList/';-->
+<!--            });-->
+<!--        </script>-->
     </div>
   </div>
     <script src="{% static 'travelPost/travelPost.js' %}"></script>
