feat : 편집하기, 삭제하기 아이콘 추가

--- a/travelPost/templates/travelPostTemp/travelPostTemp.html
+++ b/travelPost/templates/travelPostTemp/travelPostTemp.html
@@ -19,7 +19,7 @@
 
     <div class="modal-overlay" id="delete-modal">
       <div class="modal-content">
-        <img src="{% static 'travelPostTemp/images/iconoir_warning-triangle-solid.svg' alt="경고" class="modal-icon" />
+        <img src="{% static 'travelPostTemp/images/iconoir_warning-triangle-solid.svg' %}" alt="경고" class="modal-icon" />
         <p>삭제하시겠어요?</p>
         <p>기록을 삭제하면 복구할 수 없어요!</p>
         <div class="modal-buttons">
