--- a/travelList/templates/travelListDetail/travelListDetail.html
+++ b/travelList/templates/travelListDetail/travelListDetail.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>도도기록</title>
-  <link rel="stylesheet" href="record-detail.css" />
+  <link rel="stylesheet" href="{% static 'travelListDetail/travelListDetail.css' %}" />
 </head>
 <body>
   <div class="mobile-wrapper">
@@ -51,7 +51,7 @@
 
     <div class="modal-overlay" id="delete-modal" style="display: none;">
         <div class="modal-content">
-          <img src="../images/iconoir_warning-triangle-solid.svg" alt="경고" class="warning-icon" />
+          <img src="{% static 'travelPostTemp/images/iconoir_warning-triangle-solid.svg' %}" alt="경고" class="warning-icon" />
           <p>정말 삭제하시겠습니까?</p>
           <button id="confirm-delete">삭제</button>
           <button id="cancel-delete">취소</button>
@@ -59,6 +59,6 @@
       </div>
   </div>
 
-  <script src="record-detail.js"></script>
+  <script src="{% static 'travelListDetail/travelListDetail.js' %}"></script>
 </body>
 </html>
